stuck on this.setstate

--- a/index.html
+++ b/index.html
@@ -9,14 +9,9 @@
         color: red;
       }
     </style>
-    <script src='/dist/main.js' defer></script>
+    <script defer src='/public/bundle.js'></script>
   </head>
   <body>
-    <h1>Friends (The List)</h1>
-    <form>
-      <button>Create</button>
-    </form>
-    <div id='error'></div>
-    <ul></ul>
+    <div id='app'></div>
   </body>
 </html>
